# SCARLET

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: ci.yaml  docker-publish.yml
algorithm/: __init__.py  common.py  dsfl.py  scarlet.py
blazefl/core/: __init__.py  client_trainer.py  utils.py
blazefl/reproducibility/: __init__.py
config/: config.yaml
config/algorithm/: dsfl.yaml  scarlet.yaml
core/: __init__.py  client_trainer.py
dataset/: __init__.py  dataset.py  functional.py
models/: __init__.py  resnet.py  selector.py
pipeline/: __init__.py  dsfl.py  pipeline.py  scarlet.py
src/: Makefile  main.py  pipeline.py  utils.py
src/algorithm/: __init__.py  base.py  centralized.py  cfd.py  comet.py  dsfl.py  individual.py  scarlet.py  selectivefd.py
src/config/: config.yaml
src/config/algorithm/: centralized.yaml  cfd.yaml  comet.yaml  dsfl.yaml  individual.yaml  scarlet.yaml  selectivefd.yaml
src/dataset/: .gitignore  __init__.py  partitioned_dataset.py  tiny_imagenet_200.py
src/model/: __init__.py  model.py  resnet.py
src/scarlet/: config.py  main.py
src/scarlet/algorithm/: __init__.py  common.py  dsfl.py  scarlet.py
src/scarlet/core/: __init__.py  client_trainer.py
src/scarlet/dataset/: __init__.py  dataset.py  interface.py
src/scarlet/models/: __init__.py  resnet.py  selector.py
tests/: test_smoke.py
tests/algorithm/: test_common.py  test_dsfl.py  test_scarlet.py
tests/core/: test_client_trainer.py  test_model_selector.py  test_partitioned_dataset.py  test_reproducibility.py  test_server_handler.py  test_utils.py
