[project]
name = "scarlet"
version = "0.1.0"
description = "Official implementation of SCARLET (Semi-supervised federated distillation with global CAching and Reduced soft-Label EnTropy)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blazefl[reproducibility]>=2.0.0",
    "hydra-core>=1.3.2",
    "tensorboard>=2.19.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
ignore = []
fixable = ["ALL"]
