[tool.poetry]
name = "scarlet"
version = "0.1.0"
description = ""
authors = ["kitsuyaazuma <kitsuyaazuma@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "2.3.1", source = "torch_cu121" }
torchvision = { version = "0.18.1", source = "torch_cu121" }
fedlab = "^1.3.0"
tensorboard = "2.16.2"
numpy = "<2"
types-tqdm = "^4.66.0.20240417"
scikit-learn = "^1.5.1"
hydra-core = "^1.3.2"
fast-pytorch-kmeans = "^0.2.2"
psutil = "^6.1.1"
gdown = "^5.2.0"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnusedCallResult = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.7"
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
# disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.ruff]
exclude = ["__pycache__"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["C", "E", "F", "W"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10
